[build-system]
requires = ["setuptools>=61.0.0", "wheel", "varname >= 0.8.1", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "print_torch"
description = "print pytorch tensors and numpy arrays concisely."
keywords = ["pytorch", "print"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "print_torch.__version__"}