[metadata]
name = print_torch
version = 1.1
author = Yuyao Huang
author_email = huangyuyao@outlook.com
description = print pytorch tensors and numpy arrays concisely.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjyuyao/print_torch
project_urls =
    Bug Tracker = https://github.com/tjyuyao/print_torch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    varname >= 0.8.1
    tqdm

[options.packages.find]
where = src